--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,8 +47,12 @@
     
   } */
 
-  .top{
-    padding:10% 20% 1% 10%;
+
+  #name{
+    margin:0
+  }
+  #name .container-fluid{
+    padding:10% 20% 10% 10%;
     
   }
 
@@ -110,6 +114,11 @@
   }
   .about {
     font-size: 30px;
+  }
+
+  .intro-title{
+    text-align:center;
+    padding:1% 0;
   }
 
   /* Skill Component */
@@ -254,13 +263,14 @@
     background-color: deeppink;
     color:white;
     
+    
  
   }
 
 
 
   #resumeid .container-fluid{
-    padding:7% 30% 10% 30%
+    padding:10% 10% 31% 10%
   }
 
   .res-title{
@@ -268,13 +278,13 @@
     font-size:4rem;
     font-weight:bold;
     height:1rem;
-    padding-bottom:50%;
+    padding-top:50%;
     text-align:center;
   }
 
   .resume-about{
     font-family:'Montserrat', sans-serif;
-    font-size:1.5rem;
+    font-size:2rem;
     margin-top:50px;
     /* text-align:left; */
     margin-right:20px;
@@ -283,9 +293,9 @@
 
   .resume-button{
     margin:50% 20% 0;
-    text-align:center;
+    
     width:50%;
-    height:5%;
+    height:50%;
     border-radius:15%;
     background-color: skyblue;
     color:black;
@@ -307,6 +317,11 @@
 
   .project-title{
     text-align:center;
+  }
+
+  .bio-img{
+    width:75%;
+    height:75%
   }
 
   
@@ -337,6 +352,24 @@
 
   .bottom{
     margin-top:50px;
+  }
+
+  input[type=text],[type=email]{
+    width:100%;
+    padding:5% 0;
+    margin:3% 0;
+    
+  }
+  input[type=submit]{
+   padding:3% 10%;
+   margin:3% 0;
+
+  }
+
+  textarea{
+    width:100%;
+    height:200px;
+    margin:3% 0;
   }
 
   .btn{
