--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,9 +21,9 @@
     border-radius:100%;
     border:solid 3px red ;
     text-align:center;
-    font-size:1vw;
+    font-size:80%;
     margin:5% 30% 5% 30%;
-    width:25%;
+    width:30%;
     height:75%
     
     
@@ -64,7 +64,7 @@
     margin:0
   }
   #name .container-fluid{
-    padding:10% 10% 10% 10%;
+    padding:10% 10% 28% 10%;
     
   }
 
@@ -148,6 +148,10 @@
     padding:1% 0;
   }
 
+  #intro{
+    background-color:#E4F9F5 ;
+  }
+
   /* Skill Component */
 
   #skill {
@@ -204,6 +208,10 @@
     text-align:center;
     
   } */
+
+  a.school-link :hover{
+    color : red;
+  }
 
  
   .hor-line
@@ -331,7 +339,7 @@
 
 
   #resumeid .container-fluid{
-    padding:10% 10% 17% 10%
+    padding:10% 10% 28% 10%
   }
 
   .res-title{
@@ -358,8 +366,8 @@
     width:50%;
     height:50%;
     border-radius:15%;
-    background-color: skyblue;
-    color:black;
+    background-color:white;
+    color:blue;
     font-size:1.5rem;
     
     padding:10% 5%;
