--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,10 +79,10 @@
   } */
 
   .fontsize{
-    font-size: 6rem;
-    font-family: "Sacramento", cursive;
+    font-size: 4rem;
+    font-family: 'Montserrat', sans-serif;
     
-    color: #ffffff;
+    color: black;
     text-align: center;
     font-weight: bold;
   }
@@ -105,19 +105,20 @@
     font-size: 2.5rem;
     font-family: "Montserrat", sans-serif;
     
-    color: #66bfbf;
+    color: brown;
     font-weight: normal;
-    padding-bottom: 10px;
+    padding-bottom: 10%;
     text-align: center;
    
 
   }
   .top {
-    background-color: #ff4c68;
+    background-color: lightblue;
   }
   #dynamicfresher{
     animation: Fades 5s infinite;
     padding:20% 0 20% 75%;
+   
     font-size:2rem
   }
 
@@ -129,6 +130,11 @@
       opacity:1
     }
 
+  }
+
+  .centre-image{
+    background-image:linear-gradient(to right,lightblue 0%,lightblue 50%,pink 75%,pink 100%);
+    padding-top:10%
   }
   
 /*Intro component */
@@ -329,8 +335,8 @@
   /* Resume */
 
   #resumeid{
-    background-color: deeppink;
-    color:white;
+    background-color: pink;
+    color:black;
     
     
  
@@ -357,7 +363,7 @@
     margin-top:50px;
     /* text-align:left; */
     margin-right:20px;
-    color:yellow
+    color:darkorange
   }
 
   .resume-button{
